--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Server.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon Server.js",
+    "start": "nodemon app.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write \"**/*.js\"",
