--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Fakad Application",
   "version": "1.0.0",
   "description": "",
-  "main": "Server.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest",
     "start": "nodemon app.js",
