adjustment in package.json, swagger.js and recreating of swagger.json

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "Fakad Application",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon app.js",
+    "start": "nodemon server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write \"**/*.js\"",
